# ghg-notebooks

./: .dockerignore  .gitignore  005_11re_2019.csv  006_116g_2019.csv  006_116h_2019.csv  BoD.csv  Dockerfile  Expert_elicitation_analysis.R  Newcastle_actions_indicators.txt  Paths tests.ipynb  README.md  Umeå_action_categories.txt  Umeå_action_descriptions.txt  Untitled5.ipynb  White_paper_graphs.R  aplans_graphs.py  app.py  city_building_heating.ipynb  city_building_heating.py  cron.py  district_heating_emissions.ipynb  district_heating_emissions.py  docker-compose.yml  electric_vehicles.ipynb  electric_vehicles.py  electricity_emission_factor.py  emission_factors_of_energy_consumption.csv  energia_atlas.ipynb  energia_atlas.py  exposure_response_functions.csv  generic_indicators.ipynb  ghg_emissions.ipynb  ghg_emissions.py  ghgdash.py  gpc_classification.csv  health_impact_of_cars.ipynb  health_impact_units.txt  healthdata.py  hia_generic.ipynb  index.ipynb  (+14 more)
data_import/: aluesarjat.py  digitraffic.py  eco_public_bike_counters.py  energiateollisuus.py  exceptions.py  fingrid.py  fmi.py  hnh_indicators.py  hsy.py  hsy_paastot.py  karttahel.py  latauskartta.py  lipasto.py  nuuka.py  osm.py  pxweb.py  statfi.py  syke.py  traficom.py  utils.py  ymparistotilasto.py
ghgdash/: district_heating.py  ghgdash.py  variables.py
tasks/: digitraffic.py  fingrid.py
tasks/targets/: influxdb.py  quilt.py  timescaledb.py
utils/: __init__.py  data_import.py  dvc.py  modeling.py  quilt.py
