[project]
name = "ghg-notebooks"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "certifi>=2024.8.30",
    "dvc-pandas>=0.3.3",
    "environs>=11.1.0",
    "fastparquet>=2024.5.0",
    "geopandas>=1.0.1",
    "jupyterlab>=4.3.0",
    "jupyterlab-launcher>=0.13.1",
    "jupytext>=1.16.4",
    "lxml>=5.3.0",
    "numpy>=2.1.3",
    "openpyxl>=3.1.5",
    "owslib>=0.32.0",
    "pandas>=2.2.3",
    "pandas-pcaxis>=0.2",
    "pint>=0.24.4",
    "plotly>=5.24.1",
    "psycopg-binary>=3.2.3",
    "python-dateutil>=2.9.0.post0",
    "python-snappy>=0.7.3",
    "pytz>=2024.2",
    "scipy>=1.14.1",
    "traitlets>=5.14.3",
    "vdom>=1.0.0",
    "fastexcel>=0.12.0",
]

[dependency-groups]
dev = [
    "ipython>=8.29.0",
    "mypy>=1.13.0",
    "pandas-stubs>=2.2.3.241009",
    "requests-cache>=1.2.1",
    "rich>=13.9.4",
    "ruff>=0.7.3",
]
